--- a/MindCology/appsettings.json
+++ b/MindCology/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "MindcologyConnection": "Data Source=SQL6010.site4now.net;Initial Catalog=DB_A67579_cubejs;User Id=DB_A67579_cubejs_admin;Password=cubejs1cubejs2"
+  },
   "AllowedHosts": "*"
 }
