--- a/MindCology/appsettings.json
+++ b/MindCology/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "MindcologyConnection": "Data Source=SQL6010.site4now.net;Initial Catalog=DB_A67579_cubejs;User Id=DB_A67579_cubejs_admin;Password=cubejs1cubejs2"
   },
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
   "AllowedHosts": "*"
 }
+
