add medical history form and fix problem with migrations

--- a/MindCology/appsettings.json
+++ b/MindCology/appsettings.json
@@ -1,4 +1,3 @@
-
 {
   "Logging": {
     "LogLevel": {
@@ -8,13 +7,12 @@
     }
   },
   "ConnectionStrings": {
-    "MindcologyConnection": "Data Source=SQL6010.site4now.net;Initial Catalog=DB_A67579_cubejs;User Id=DB_A67579_cubejs_admin;Password=cubejs1cubejs2"
+    "MindcologyConnection": "Data Source=DESKTOP-IUANLVR\\MSSQLSERVER03;Initial Catalog=hadeel;Integrated Security=SSPI;persist security info=True;"
   },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   },
   "AllowedHosts": "*"
+
+
 }
-
-
-
