--- a/MindCology/appsettings.json
+++ b/MindCology/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "MindcologyConnection": "Data Source=DESKTOP-IUANLVR\\MSSQLSERVER03;Initial Catalog=hadeel;Integrated Security=SSPI;persist security info=True;"
+    "MindcologyConnection": "Data Source=LAP14549\\SQLEXPRESS;Initial Catalog=MindCologyDB;Integrated Security=SSPI;persist security info=True;"
   },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
